force-app/main/default/objects/ProductCoverage/ProductCoverage.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>