force-app/main/default/objects/ProductCoverage/fields/Authorized_Limit__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Limit__c</fullName>
    <label>Authorized Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>