force-app/main/default/objects/ProductCoverage/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Sub-limit</fullName>
            </value>
            <value>
                <fullName>Extensions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>