force-app/main/default/objects/ProductCoverage/fields/Conga_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Conga_Product_Name__c</fullName>
    <label>Conga Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>