force-app/main/default/objects/ProductCoverage/fields/Coverage_Name__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Name__c</fullName>
    <label>Coverage Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Management Liability Coverages</fullName>
            </value>
            <value>
                <fullName>Commercial Crime Bond Coverages</fullName>
            </value>
            <value>
                <fullName>Course of Construction Coverage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>