force-app/main/default/objects/ProductCoverage/fields/Gernal__c.field-meta.xml
<CustomField>
    <fullName>Gernal__c</fullName>
    <label>General Aggregate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>