force-app/main/default/objects/ProductCoverage/fields/Layer_Limit__c.field-meta.xml
<CustomField>
    <fullName>Layer_Limit__c</fullName>
    <label>Layer Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>