force-app/main/default/objects/ProductCoverage/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Product</label>
    <referenceTo>ProductCoverage</referenceTo>
    <relationshipLabel>Product Details</relationshipLabel>
    <relationshipName>Product_Details</relationshipName>
    <type>Lookup</type>
</CustomField>