force-app/main/default/objects/ProductCoverage/fields/Premium_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Premium_Allocation__c</fullName>
    <label>Premium Allocation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>