force-app/main/default/objects/ProductCoverage/fields/QPDName__c.field-meta.xml
<CustomField>
    <fullName>QPDName__c</fullName>
    <description>This field is used as formula in flow : Clone Product Option to QPD</description>
    <formula>CoverageType.Name</formula>
    <inlineHelpText>This field is used as formula in flow : Clone Product Option to QPD</inlineHelpText>
    <label>QPDName</label>
    <type>Text</type>
</CustomField>