force-app/main/default/objects/ProductCoverage/fields/Separate__c.field-meta.xml
<CustomField>
    <fullName>Separate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Separate</label>
    <type>Checkbox</type>
</CustomField>