force-app/main/default/objects/ProductCoverage/recordTypes/Commercial_Lines.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Lines</fullName>
    <active>true</active>
    <label>Commercial Lines</label>
</RecordType>