force-app/main/default/objects/ProductCoverage/recordTypes/Financial_Lines.recordType-meta.xml
<RecordType>
    <fullName>Financial_Lines</fullName>
    <active>true</active>
    <label>Financial Lines</label>
</RecordType>