force-app/main/default/objects/ProductCoverage/recordTypes/Product_Details_Of_License.recordType-meta.xml
<RecordType>
    <fullName>Product_Details_Of_License</fullName>
    <active>true</active>
    <label>Product Details Of License</label>
</RecordType>