force-app/main/default/objects/ProductCoverage/recordTypes/Professional_Lines.recordType-meta.xml
<RecordType>
    <fullName>Professional_Lines</fullName>
    <active>true</active>
    <label>Professional Lines</label>
</RecordType>