force-app/main/default/objects/ProductCoverage/listViews/All_ProductCoverages.listView-meta.xml
<ListView>
    <fullName>All_ProductCoverages</fullName>
    <filterScope>Everything</filterScope>
    <label>All Product Coverages</label>
</ListView>